--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
                     <div class="about_img"> <img src="./product_img.png" alt="image"> </div>
                 </div>
             </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-6">
+                    <center>
+                        <h2>VISION</h2>
+                        <p>Through making a delectable finger food globally, it assures satisfaction, nutritious and economically effective.</p>
+                    </center>
+                </div>
+                <div class="col-md-6">
+                    <center>
+                        <h2>MISSION</h2>
+                        <p>To produce unique type of finger food that introduces the taste of uncommon herbaceous plant that helps to maintain healthy lifestyle.</p>
+                    </center>
+                </div>
+            </div>
         </div>
     </section>
     <section id="inside" class="section-padding parallex-bg">
