--- a/index.html
+++ b/index.html
@@ -223,19 +223,11 @@
         <div class="footer_bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-push-6">
-                        <div class="follow_us">
-                            <ul>
-                                <li><a href="http://zedthemes.com/teaser/#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="http://zedthemes.com/teaser/#"><i class="fa fa-twitch"></i></a></li>
-                                <li><a href="http://zedthemes.com/teaser/#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="http://zedthemes.com/teaser/#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="http://zedthemes.com/teaser/#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-md-pull-6">
+                    <div class="col-md-9">
                         <p>Copyright © 2020 Cheap n' Chips. All Right Reserved.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p>Powered by <a href="https://www.facebook.com/launchpro1997">JudePro1997</a></p>
                     </div>
                 </div>
             </div>
